Add venues CRUD
